--- a/web/views/proposta/detalhes.phtml
+++ b/web/views/proposta/detalhes.phtml
@@ -1,30 +1,24 @@
-<?php /** @var Vaga $vaga */ ?>
+<?php
+    /** @var Vaga $vaga */
+    /** @var Proposta $proposta */
+
+?>
 <div id="vagas" class="flex flex-col px-4 py-10 gap-10 justify-center items-center">
     <h2 class="text-3xl font-bold">Proposta de contratação</h2>
 </div>
 <div class="mx-auto max-w-4xl border p-4 m-1 mb-20 rounded-xl bg-white">
-    <input type="hidden"/>
-    <div class="flex space-x-2">
-        <label class="form-control w-1/4">
-            <label for="vaga" class="col-form-label">Vaga <?= $_GET['vagaId'] ?></label>
-        </label>
-        <label class="form-control w-1/3">
-            <label for="candidato" class="col-form-label">Candidato <?= $candidato ?></label>
-        </label>
-    </div>
-    <div class="divider"></div>
     <div class="flex space-x-2">
         <label class="form-control w-3/4">
             <div class="label">
                 <span class="label-text">Cargo</span>
             </div>
-            <?= $propostas->getCargo() ?>
+            <?= $proposta->getCargo() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Salário</span>
             </div>
-            R$ <?= $propostas->getSalario() ?>,00
+            R$ <?= $proposta->getSalario() ?>,00
         </label>
     </div>
     <div class="flex space-x-2">
@@ -32,25 +26,25 @@
             <div class="label">
                 <span class="label-text">Regime de Contratação</span>
             </div>
-            <?= $propostas->getRegimeContratacao() ?>
+            <?= RegimeContratacaoEnum::from($proposta->getRegimeContratacao())->label() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Regime de Trabalho</span>
             </div>
-            <?= $propostas->getRegimeTrabalho() ?>
+            <?= RegimeTrabalhoEnum::from($proposta->getRegimeTrabalho())->label() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Nível de Senioridade</span>
             </div>
-            <?= $propostas->getNivelSenioridade() ?>
+            <?= NivelSenioridadeEnum::from($proposta->getNivelSenioridade())->label() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Nível hierárquico</span>
             </div>
-            <?= $propostas->getNivelHierarquico() ?>
+            <?= NivelHierarquicoEnum::from($proposta->getNivelHierarquico())->label() ?>
         </label>
     </div>
     <div class="flex space-x-2">
@@ -58,19 +52,19 @@
             <div class="label">
                 <span class="label-text">Endereço</span>
             </div>
-            <?= $propostas->getEndereco() ?>
+            <?= $proposta->getEndereco() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Expediente</span>
             </div>
-            <?= $propostas->getExpediente() ?>
+            <?= $proposta->getExpediente() ?>
         </label>
         <label class="form-control w-1/4">
             <div class="label">
                 <span class="label-text">Data de início</span>
             </div>
-            <?= $propostas->getDataInicio() ?>
+            <?= date("d/m/Y", strtotime($proposta->getDataInicio())) ?>
         </label>
     </div>
 
@@ -79,9 +73,9 @@
         <h2 class="text-3xl font-bold">Agora é com você!</h2>
     </div>
     <div class="mt-6 flex items-center justify-center space-x-3">
-        <form method="post" action="/propostas/salvar">
-            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
-            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
+        <form method="post" action="/proposta/responder">
+            <input type="hidden" name="vaga" value="<?php echo $proposta->getVaga()->getId() ?>">
+            <input type="hidden" name="candidato" value="<?php echo $proposta->getCandidato()->getId() ?>">
             <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Rejeitada->value ?>">
             <button class="btn btn-error btn-wide text-xs" type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
@@ -90,9 +84,9 @@
                 Recusar
             </button>
         </form>
-        <form method="post" action="/propostas/salvar">
-            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
-            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
+        <form method="post" action="/proposta/responder">
+            <input type="hidden" name="vaga" value="<?php echo $proposta->getVaga()->getId() ?>">
+            <input type="hidden" name="candidato" value="<?php echo $proposta->getCandidato()->getId() ?>">
             <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Aceita->value ?>">
             <button class="btn btn-success btn-wide text-lg hover:text-xl" type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hover:size-8">
